--- a/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/EvenDayTableViewCell.xib
@@ -7,6 +7,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GmarketSansTTFMedium.ttf">
+            <string>GmarketSansTTFMedium</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,113 +25,83 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KcE-mo-iO7">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="163"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROc-9O-fd3">
-                                <rect key="frame" x="24" y="97" width="66" height="66"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="6eV-ht-Qjc">
-                                        <rect key="frame" x="3" y="3" width="60" height="60"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" name="Grey1Bg"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="50Z-1e-CEI"/>
-                                    <constraint firstAttribute="trailing" secondItem="6eV-ht-Qjc" secondAttribute="trailing" constant="3" id="5Jm-27-RtU"/>
-                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="leading" secondItem="ROc-9O-fd3" secondAttribute="leading" constant="3" id="DGC-bW-6jH"/>
-                                    <constraint firstAttribute="bottom" secondItem="6eV-ht-Qjc" secondAttribute="bottom" constant="3" id="g6B-oh-f6p"/>
-                                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="top" secondItem="ROc-9O-fd3" secondAttribute="top" constant="3" id="lxh-Zy-T1W"/>
-                                    <constraint firstAttribute="width" constant="66" id="tRv-64-3me"/>
-                                </constraints>
-                            </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Pk-db-TcF">
-                                <rect key="frame" x="110" y="103.5" width="133.5" height="53"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="2일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAN-Yg-Cxx">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="25.5"/>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="21"/>
-                                        <color key="textColor" name="Black1Text"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="깨끗하게 손 씻기 3회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7z3-Jf-lbd">
-                                        <rect key="frame" x="0.0" y="33.5" width="133.5" height="19.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <color key="textColor" name="Black2Text"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="UAN-Yg-Cxx" firstAttribute="top" secondItem="0Pk-db-TcF" secondAttribute="top" id="Yed-Yr-3oC"/>
-                                </constraints>
-                            </stackView>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAp-Ts-isd">
-                                <rect key="frame" x="201" y="104" width="81.5" height="24.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2x0-NQ-DZV">
-                                        <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" name="Pink2"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="2x0-NQ-DZV" secondAttribute="trailing" constant="12" id="a3J-dy-HR4"/>
-                                    <constraint firstItem="2x0-NQ-DZV" firstAttribute="top" secondItem="cAp-Ts-isd" secondAttribute="top" constant="5" id="cX5-qu-8JU"/>
-                                    <constraint firstAttribute="bottom" secondItem="2x0-NQ-DZV" secondAttribute="bottom" constant="5" id="jIF-8I-b85"/>
-                                    <constraint firstItem="2x0-NQ-DZV" firstAttribute="leading" secondItem="cAp-Ts-isd" secondAttribute="leading" constant="12" id="wiD-FJ-qVk"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" name="CourseBgGray"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeCchallengeC" translatesAutoresizingMaskIntoConstraints="NO" id="6eV-ht-Qjc">
+                        <rect key="frame" x="191" y="51.5" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="ROc-9O-fd3" secondAttribute="bottom" id="0LI-Op-zM6"/>
-                            <constraint firstItem="ROc-9O-fd3" firstAttribute="leading" secondItem="KcE-mo-iO7" secondAttribute="leading" constant="24" id="ImL-qB-IvM"/>
-                            <constraint firstItem="cAp-Ts-isd" firstAttribute="leading" secondItem="UAN-Yg-Cxx" secondAttribute="trailing" constant="41" id="X8n-XL-OaI"/>
-                            <constraint firstItem="0Pk-db-TcF" firstAttribute="leading" secondItem="ROc-9O-fd3" secondAttribute="trailing" constant="20" id="asn-Xb-ZUp"/>
-                            <constraint firstItem="cAp-Ts-isd" firstAttribute="centerY" secondItem="UAN-Yg-Cxx" secondAttribute="centerY" id="dtR-qd-NJ3"/>
-                            <constraint firstItem="0Pk-db-TcF" firstAttribute="centerY" secondItem="ROc-9O-fd3" secondAttribute="centerY" id="gMy-dC-ee4"/>
+                            <constraint firstAttribute="width" constant="60" id="4g5-Qc-yHX"/>
+                            <constraint firstAttribute="width" secondItem="6eV-ht-Qjc" secondAttribute="height" multiplier="1:1" id="MEV-ZG-OZr"/>
+                        </constraints>
+                    </imageView>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAp-Ts-isd">
+                        <rect key="frame" x="182" y="95.5" width="78.5" height="24"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2x0-NQ-DZV">
+                                <rect key="frame" x="12" y="5" width="54.5" height="14"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                <color key="textColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" name="SampleGreen"/>
+                        <constraints>
+                            <constraint firstItem="2x0-NQ-DZV" firstAttribute="leading" secondItem="cAp-Ts-isd" secondAttribute="leading" constant="12" id="Rwo-Hh-AEc"/>
+                            <constraint firstAttribute="trailing" secondItem="2x0-NQ-DZV" secondAttribute="trailing" constant="12" id="U8W-dD-7it"/>
+                            <constraint firstAttribute="bottom" secondItem="2x0-NQ-DZV" secondAttribute="bottom" constant="5" id="gPC-Xd-pAS"/>
+                            <constraint firstItem="2x0-NQ-DZV" firstAttribute="top" secondItem="cAp-Ts-isd" secondAttribute="top" constant="5" id="tDD-PP-F60"/>
                         </constraints>
                     </view>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Pk-db-TcF">
+                        <rect key="frame" x="67" y="56.5" width="100" height="50"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="2일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAN-Yg-Cxx">
+                                <rect key="frame" x="45" y="0.0" width="55" height="28"/>
+                                <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="24"/>
+                                <color key="textColor" name="Black1Text"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="깨끗하게 손 씻기 3회" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7z3-Jf-lbd">
+                                <rect key="frame" x="0.0" y="36" width="100" height="14"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                <color key="textColor" name="Black2Text"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
-                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="BgLightYellow"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="KcE-mo-iO7" secondAttribute="bottom" id="Emm-ql-VYG"/>
-                    <constraint firstAttribute="trailing" secondItem="KcE-mo-iO7" secondAttribute="trailing" id="Gbs-vR-s5K"/>
-                    <constraint firstItem="KcE-mo-iO7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="iq0-dp-4Z8"/>
-                    <constraint firstItem="KcE-mo-iO7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="vAx-AX-FM8"/>
+                    <constraint firstItem="cAp-Ts-isd" firstAttribute="centerX" secondItem="6eV-ht-Qjc" secondAttribute="centerX" id="3uw-2S-KUv"/>
+                    <constraint firstItem="0Pk-db-TcF" firstAttribute="centerY" secondItem="6eV-ht-Qjc" secondAttribute="centerY" id="60U-0j-Nj2"/>
+                    <constraint firstItem="cAp-Ts-isd" firstAttribute="bottom" secondItem="6eV-ht-Qjc" secondAttribute="bottom" constant="8" id="MpO-xn-FlR"/>
+                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="leading" secondItem="0Pk-db-TcF" secondAttribute="trailing" constant="24" id="ao1-4Z-1T8"/>
+                    <constraint firstItem="6eV-ht-Qjc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fkS-eg-PNL"/>
+                    <constraint firstAttribute="trailing" secondItem="6eV-ht-Qjc" secondAttribute="trailing" constant="69" id="tBW-eY-UpL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="cellBgView" destination="KcE-mo-iO7" id="GHW-z5-zvg"/>
                 <outlet property="dayCountLabel" destination="UAN-Yg-Cxx" id="XJd-B0-RUN"/>
                 <outlet property="dayLabel" destination="2x0-NQ-DZV" id="3Hd-gv-yL4"/>
                 <outlet property="dayLabelBgView" destination="cAp-Ts-isd" id="znT-Ef-moZ"/>
                 <outlet property="descriptionLabel" destination="7z3-Jf-lbd" id="kFh-Nf-eNj"/>
-                <outlet property="propertyBgView" destination="ROc-9O-fd3" id="fcg-Qe-Mf1"/>
                 <outlet property="propertyImageView" destination="6eV-ht-Qjc" id="wIc-2U-a78"/>
             </connections>
             <point key="canvasLocation" x="132" y="99"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="waterSampleImg" width="36" height="36"/>
+        <image name="typeCchallengeC" width="144" height="144"/>
+        <namedColor name="BgLightYellow">
+            <color red="1" green="0.98400002717971802" blue="0.93699997663497925" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Black2Text">
             <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="CourseBgGray">
-            <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Grey1Bg">
-            <color red="0.90600001811981201" green="0.90600001811981201" blue="0.90600001811981201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Pink2">
-            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="SampleGreen">
+            <color red="0.10599999874830246" green="0.75700002908706665" blue="0.57599997520446777" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
