--- a/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
@@ -7,63 +7,47 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="GmarketSansTTFMedium.ttf">
+            <string>GmarketSansTTFMedium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FirstDayTableViewCell" rowHeight="123" id="KGk-i7-Jjw" customClass="FirstDayTableViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="123"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FirstDayTableViewCell" rowHeight="250" id="KGk-i7-Jjw" customClass="FirstDayTableViewCell" customModule="Journey" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="379" height="250"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="379" height="123"/>
+                <rect key="frame" x="0.0" y="0.0" width="379" height="250"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayN-lo-PQE">
-                        <rect key="frame" x="312" y="0.0" width="20" height="90"/>
-                        <color key="backgroundColor" name="Pink2"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeCchallengeC" translatesAutoresizingMaskIntoConstraints="NO" id="t29-ZG-jYv">
+                        <rect key="frame" x="69" y="143" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="78t-8k-tn9"/>
-                            <constraint firstAttribute="height" constant="90" id="ADr-e8-FYP"/>
+                            <constraint firstAttribute="width" constant="60" id="Hof-Yl-nwR"/>
+                            <constraint firstAttribute="width" secondItem="t29-ZG-jYv" secondAttribute="height" multiplier="1:1" id="ovW-96-Gu1"/>
                         </constraints>
-                    </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CCZ-df-TIz">
-                        <rect key="frame" x="289" y="57" width="66" height="66"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="t29-ZG-jYv">
-                                <rect key="frame" x="3" y="3" width="60" height="60"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" name="Pink2"/>
-                        <constraints>
-                            <constraint firstItem="t29-ZG-jYv" firstAttribute="leading" secondItem="CCZ-df-TIz" secondAttribute="leading" constant="3" id="8j9-ko-ovv"/>
-                            <constraint firstAttribute="trailing" secondItem="t29-ZG-jYv" secondAttribute="trailing" constant="3" id="NZd-Fm-Nbl"/>
-                            <constraint firstAttribute="bottom" secondItem="t29-ZG-jYv" secondAttribute="bottom" constant="3" id="adV-kY-kZT"/>
-                            <constraint firstItem="t29-ZG-jYv" firstAttribute="top" secondItem="CCZ-df-TIz" secondAttribute="top" constant="3" id="cEr-b4-sr4"/>
-                            <constraint firstAttribute="width" constant="66" id="lme-5t-RaM"/>
-                            <constraint firstAttribute="height" constant="66" id="xMC-gA-eUW"/>
-                        </constraints>
-                    </view>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="OAV-39-0oH">
-                        <rect key="frame" x="108" y="63.5" width="161" height="53"/>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="OAV-39-0oH">
+                        <rect key="frame" x="153" y="144" width="121" height="58.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="1일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssc-oE-dGm">
-                                <rect key="frame" x="114" y="0.0" width="47" height="25.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="21"/>
-                                <color key="textColor" name="Black1Text"/>
+                                <rect key="frame" x="0.0" y="0.0" width="55" height="28"/>
+                                <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="24"/>
+                                <color key="textColor" name="Black1"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알콜스왑으로 핸드폰 닦기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcm-tR-8hh">
-                                <rect key="frame" x="0.0" y="33.5" width="161" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <rect key="frame" x="0.0" y="44" width="121" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" name="Black2Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="Ssc-oE-dGm" firstAttribute="top" secondItem="OAV-39-0oH" secondAttribute="top" id="gZp-3I-0pj"/>
-                        </constraints>
                     </stackView>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W98-sa-HWL">
-                        <rect key="frame" x="99.5" y="64" width="81.5" height="24.5"/>
+                        <rect key="frame" x="58.5" y="186.5" width="81.5" height="24.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="06.28 완료" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRs-Gb-6Xj">
                                 <rect key="frame" x="12" y="5" width="57.5" height="14.5"/>
@@ -72,54 +56,49 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="Pink2"/>
+                        <color key="backgroundColor" name="SampleGreen"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="NRs-Gb-6Xj" secondAttribute="trailing" constant="12" id="886-1I-r3g"/>
-                            <constraint firstItem="NRs-Gb-6Xj" firstAttribute="leading" secondItem="W98-sa-HWL" secondAttribute="leading" constant="12" id="bKv-vE-TI4"/>
-                            <constraint firstAttribute="bottom" secondItem="NRs-Gb-6Xj" secondAttribute="bottom" constant="5" id="hq9-Qk-ehV"/>
-                            <constraint firstItem="NRs-Gb-6Xj" firstAttribute="top" secondItem="W98-sa-HWL" secondAttribute="top" constant="5" id="wMy-HJ-vCx"/>
+                            <constraint firstItem="NRs-Gb-6Xj" firstAttribute="top" secondItem="W98-sa-HWL" secondAttribute="top" constant="5" id="dbS-0C-BcK"/>
+                            <constraint firstAttribute="bottom" secondItem="NRs-Gb-6Xj" secondAttribute="bottom" constant="5" id="e8h-Ol-kBF"/>
+                            <constraint firstItem="NRs-Gb-6Xj" firstAttribute="leading" secondItem="W98-sa-HWL" secondAttribute="leading" constant="12" id="qIN-4L-1mq"/>
+                            <constraint firstAttribute="trailing" secondItem="NRs-Gb-6Xj" secondAttribute="trailing" constant="12" id="ybJ-gy-Hbj"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" name="CourseBgGray"/>
+                <color key="backgroundColor" name="BgLightYellow"/>
                 <constraints>
-                    <constraint firstItem="ayN-lo-PQE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="1eC-WG-15Y"/>
-                    <constraint firstItem="W98-sa-HWL" firstAttribute="centerY" secondItem="Ssc-oE-dGm" secondAttribute="centerY" id="CXl-WM-i5r"/>
-                    <constraint firstItem="CCZ-df-TIz" firstAttribute="leading" secondItem="OAV-39-0oH" secondAttribute="trailing" constant="20" id="Cgc-br-pe0"/>
-                    <constraint firstItem="CCZ-df-TIz" firstAttribute="centerX" secondItem="ayN-lo-PQE" secondAttribute="centerX" id="HIH-xT-6Lk"/>
-                    <constraint firstItem="Ssc-oE-dGm" firstAttribute="leading" secondItem="W98-sa-HWL" secondAttribute="trailing" constant="41" id="IKN-0N-PKV"/>
-                    <constraint firstItem="OAV-39-0oH" firstAttribute="centerY" secondItem="CCZ-df-TIz" secondAttribute="centerY" id="d0J-eL-WAA"/>
-                    <constraint firstAttribute="bottom" secondItem="CCZ-df-TIz" secondAttribute="bottom" id="miR-hw-ROa"/>
-                    <constraint firstAttribute="trailing" secondItem="ayN-lo-PQE" secondAttribute="trailing" constant="47" id="ry9-P2-0av"/>
+                    <constraint firstAttribute="bottom" secondItem="t29-ZG-jYv" secondAttribute="bottom" constant="47" id="3jP-Np-jmr"/>
+                    <constraint firstItem="OAV-39-0oH" firstAttribute="centerY" secondItem="t29-ZG-jYv" secondAttribute="centerY" id="72j-tG-RrX"/>
+                    <constraint firstItem="t29-ZG-jYv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="69" id="99L-ts-ZSu"/>
+                    <constraint firstItem="W98-sa-HWL" firstAttribute="bottom" secondItem="t29-ZG-jYv" secondAttribute="bottom" constant="8" id="RN1-wI-rkO"/>
+                    <constraint firstItem="OAV-39-0oH" firstAttribute="leading" secondItem="t29-ZG-jYv" secondAttribute="trailing" constant="24" id="iFJ-o6-gvP"/>
+                    <constraint firstItem="W98-sa-HWL" firstAttribute="centerX" secondItem="t29-ZG-jYv" secondAttribute="centerX" id="zz9-As-jpO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="circleView" destination="CCZ-df-TIz" id="M4C-et-Jy1"/>
                 <outlet property="dayCountLabel" destination="Ssc-oE-dGm" id="5bt-ix-h3t"/>
                 <outlet property="dayLabel" destination="NRs-Gb-6Xj" id="NuF-hp-W8b"/>
                 <outlet property="dayLabelBgView" destination="W98-sa-HWL" id="Vm0-6K-fB9"/>
                 <outlet property="descriptionLabel" destination="wcm-tR-8hh" id="fAH-j2-VL1"/>
-                <outlet property="propertyBgView" destination="CCZ-df-TIz" id="CFJ-Ua-WHd"/>
                 <outlet property="propertyImageView" destination="t29-ZG-jYv" id="GkM-Rq-uOX"/>
-                <outlet property="roadView" destination="ayN-lo-PQE" id="nNX-bh-J8S"/>
             </connections>
             <point key="canvasLocation" x="45.652173913043484" y="125.89285714285714"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="waterSampleImg" width="36" height="36"/>
-        <namedColor name="Black1Text">
-            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="typeCchallengeC" width="144" height="144"/>
+        <namedColor name="BgLightYellow">
+            <color red="1" green="0.98400002717971802" blue="0.93699997663497925" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Black1">
+            <color red="0.071000002324581146" green="0.071000002324581146" blue="0.078000001609325409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Black2Text">
             <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="CourseBgGray">
-            <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Pink2">
-            <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="SampleGreen">
+            <color red="0.10599999874830246" green="0.75700002908706665" blue="0.57599997520446777" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
