[#301] 비밀번호 찾기 뷰 변경사항 적용
### Description
- UI 변경사항 적용
- 에러처리

아직 error message가 fix나지 않아서,, 픽스나면 새 이슈 파고 고치겠습니다!

### Related Issue
Resolve #301

--- a/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/FindPassword.storyboard
@@ -7,6 +7,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Find Password View Controller-->
         <scene sceneID="s0d-6b-0kx">
@@ -16,16 +24,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRR-Og-5o1">
-                                <rect key="frame" x="24" y="85" width="220.5" height="43"/>
-                                <string key="text">이런, 길 잃은 나의 아기고양이
-당신의 이메일을 입력해주겠어?</string>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                <color key="textColor" name="Black1Text"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 잊으셨나요?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRR-Og-5o1">
+                                <rect key="frame" x="24" y="85" width="219" height="28"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="22"/>
+                                <color key="textColor" name="Black1"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="ex) journey@naver.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qlG-Pi-TuN">
-                                <rect key="frame" x="24" y="158" width="366" height="28"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0lv-6i-rOr">
+                                <rect key="frame" x="24" y="812" width="366" height="40"/>
+                                <color key="backgroundColor" red="1" green="0.7803921568627451" blue="0.3529411764705882" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="ioe-hH-i4o"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
+                                <state key="normal" title="인증번호 전송">
+                                    <color key="titleColor" name="White"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchNextButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ncm-i6-037"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 재설정하려는 이메일을 입력해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cHn-ni-D6t">
+                                <rect key="frame" x="24" y="129" width="240" height="15.5"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                <color key="textColor" name="Black3Text"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="예) mohaeng@gmail.com" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qlG-Pi-TuN">
+                                <rect key="frame" x="24" y="246" width="366" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="yRv-Gi-oCX"/>
                                 </constraints>
@@ -34,44 +60,22 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wht-TW-o2Z">
-                                <rect key="frame" x="24" y="186" width="366" height="1"/>
+                                <rect key="frame" x="24" y="274" width="366" height="1"/>
                                 <color key="backgroundColor" name="Grey1Line"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="OmM-t2-kzC"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3Xi-7I-tJf">
-                                <rect key="frame" x="184.5" y="778" width="45.5" height="8"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circlePink" translatesAutoresizingMaskIntoConstraints="NO" id="a11-bq-m7C">
-                                        <rect key="frame" x="0.0" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circleGray" translatesAutoresizingMaskIntoConstraints="NO" id="SzE-zq-v9F">
-                                        <rect key="frame" x="18.5" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circleGray" translatesAutoresizingMaskIntoConstraints="NO" id="NnC-f3-848">
-                                        <rect key="frame" x="37" y="0.0" width="8.5" height="8"/>
-                                    </imageView>
-                                </subviews>
-                            </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0lv-6i-rOr">
-                                <rect key="frame" x="24" y="794" width="366" height="48"/>
-                                <color key="backgroundColor" name="Grey1Bg"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="ioe-hH-i4o"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
-                                <state key="normal" title="계속하기">
-                                    <color key="titleColor" name="White"/>
-                                </state>
-                                <connections>
-                                    <action selector="touchNextButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ncm-i6-037"/>
-                                </connections>
-                            </button>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="존재하지 않는 이메일입니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cq-cX-9u5">
-                                <rect key="frame" x="280" y="199" width="110" height="12"/>
+                                <rect key="frame" x="280" y="287" width="110" height="12"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" name="Red"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czB-Kw-Jva">
+                                <rect key="frame" x="24" y="218.5" width="33.5" height="15.5"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                                <color key="textColor" name="Black3Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -80,19 +84,21 @@
                         <constraints>
                             <constraint firstItem="qlG-Pi-TuN" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="0Tz-3u-Yju"/>
                             <constraint firstItem="8cq-cX-9u5" firstAttribute="top" secondItem="Wht-TW-o2Z" secondAttribute="bottom" constant="12" id="3Nx-rk-uxO"/>
-                            <constraint firstItem="3Xi-7I-tJf" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="5c9-7G-ybt"/>
+                            <constraint firstItem="qlG-Pi-TuN" firstAttribute="top" secondItem="czB-Kw-Jva" secondAttribute="bottom" constant="12" id="3gv-EL-EJU"/>
+                            <constraint firstItem="czB-Kw-Jva" firstAttribute="leading" secondItem="cHn-ni-D6t" secondAttribute="leading" id="AYl-c1-TIn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8cq-cX-9u5" secondAttribute="trailing" constant="24" id="FUY-Oq-rwY"/>
                             <constraint firstItem="Wht-TW-o2Z" firstAttribute="top" secondItem="qlG-Pi-TuN" secondAttribute="bottom" id="GmH-l0-Yqa"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="0lv-6i-rOr" secondAttribute="trailing" constant="24" id="Jeo-vO-UWg"/>
-                            <constraint firstItem="qlG-Pi-TuN" firstAttribute="top" secondItem="YRR-Og-5o1" secondAttribute="bottom" constant="30" id="T0f-aq-P6c"/>
                             <constraint firstItem="0lv-6i-rOr" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="c9v-CQ-GDN"/>
                             <constraint firstItem="YRR-Og-5o1" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="41" id="cKh-jL-ZN1"/>
                             <constraint firstItem="YRR-Og-5o1" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="cp3-fq-ls0"/>
                             <constraint firstItem="Wht-TW-o2Z" firstAttribute="leading" secondItem="qlG-Pi-TuN" secondAttribute="leading" id="fHs-iU-pqb"/>
                             <constraint firstItem="Wht-TW-o2Z" firstAttribute="trailing" secondItem="qlG-Pi-TuN" secondAttribute="trailing" id="fu0-vW-Oj4"/>
+                            <constraint firstItem="cHn-ni-D6t" firstAttribute="leading" secondItem="YRR-Og-5o1" secondAttribute="leading" id="iMd-2M-PFt"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="0lv-6i-rOr" secondAttribute="bottom" constant="10" id="kcC-Du-mtA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="qlG-Pi-TuN" secondAttribute="trailing" constant="24" id="kfL-3p-pgW"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="0lv-6i-rOr" secondAttribute="bottom" constant="20" id="vp6-qR-XlY"/>
-                            <constraint firstItem="0lv-6i-rOr" firstAttribute="top" secondItem="3Xi-7I-tJf" secondAttribute="bottom" constant="8" id="yai-CQ-qOS"/>
+                            <constraint firstItem="cHn-ni-D6t" firstAttribute="top" secondItem="YRR-Og-5o1" secondAttribute="bottom" constant="16" id="m89-Wi-qfF"/>
+                            <constraint firstItem="czB-Kw-Jva" firstAttribute="top" secondItem="cHn-ni-D6t" secondAttribute="bottom" constant="74" id="y5L-RR-xuw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -107,13 +113,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="circleGray" width="8.5" height="8"/>
-        <image name="circlePink" width="8.5" height="8"/>
+        <namedColor name="Black1">
+            <color red="0.071000002324581146" green="0.071000002324581146" blue="0.078000001609325409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Black1Text">
             <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Grey1Bg">
-            <color red="0.90600001811981201" green="0.90600001811981201" blue="0.90600001811981201" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Black3Text">
+            <color red="0.49799999594688416" green="0.49799999594688416" blue="0.49799999594688416" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Grey1Line">
             <color red="0.92500001192092896" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
